# stockmcp

./: .env  main.py  pyproject.toml  requirement.txt
langgraph_app/: graph.py  langchain_mcp.ipynb  langchain_mcp.py  state.py
langgraph_app/nodes/: get_week_prices_node.py
mcp_server/: mcp_define.py  server.py
mcp_server/tools/: news_fetch_tool.py  price_fetch.py
