[project]
name = "stockmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain>=1.1.3",
    "langchain-groq>=1.1.0",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.4",
    "mcp[cli]>=1.23.3",
    "requests>=2.32.5",
]
